--- a/src/popup.html
+++ b/src/popup.html
@@ -15,7 +15,10 @@
 
   <body>
     <div ng-view></div>
-    
+    <div class="poweredby">
+    &copy; 2017 <a target="_blank" href="http://tezbox.github.io">TezBox</a> - Developed by Stephen Andrews<br />
+        Donate Bitcoin -  <a target="_blank" href="bitcoin:1KSiyfgs5XwTZjaLpmCTHxonsyXMx383P1">1KSiyfgs5XwTZjaLpmCTHxonsyXMx383P1</a>
+    </div>
     <!-- build:js popup.js -->
     <script src="js/eztz.js"></script>
     <script src="js/sjcl.js"></script>
