new updated design + changes to account and injection methods

--- a/src/send.html
+++ b/src/send.html
@@ -23,7 +23,6 @@
     <!-- build:js popup.js -->
     <script src="js/eztz.js"></script>
     <script src="js/sjcl.js"></script>
-    <script src="js/jdenticon.js"></script>
     <script src="js/jquery/jquery.min.js"></script>
     <script src="js/underscore/underscore.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
@@ -31,9 +30,9 @@
     <script src="scripts/app/modules/angular-underscore.min.js"></script>
     <script src="scripts/app/modules/angular-route.min.js"></script>
     <script src="scripts/app/modules/ui-bootstrap-0.9.0.min.js"></script>
-    <script src="scripts/app/app.js"></script>
+    <script src="scripts/app/send.js"></script>
     <script src="scripts/app/services/storage.js"></script>
-    <script src="scripts/app/controllers/controllers.js"></script>
+    <script src="scripts/app/controllers/controllers-send.js"></script>
     <!-- endbuild -->
   </body>
 </html>
