expose balance, full pk, way to update balance

--- a/src/background.html
+++ b/src/background.html
@@ -9,6 +9,7 @@
   <body>
     <!-- build:js background.js -->
     <script src="scripts/background.js"></script>
+    <script src="js/eztz.js"></script>
     <!-- endbuild -->
   </body>
 </html>
