send popup styling

--- a/src/send.html
+++ b/src/send.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div ng-view></div>
+    <div id="area" ng-view></div>
     <div class="poweredby">
     &copy; 2017 <a target="_blank" href="http://tezbox.github.io">TezBox</a> - Developed by Stephen Andrews<br />
         Donate Bitcoin -  <a target="_blank" href="bitcoin:1KSiyfgs5XwTZjaLpmCTHxonsyXMx383P1">1KSiyfgs5XwTZjaLpmCTHxonsyXMx383P1</a>
