--- a/src/popup.html
+++ b/src/popup.html
@@ -11,7 +11,7 @@
 				<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
     <!-- endbuild -->
     <base href="/">
-    <title>Popup Extension</title>
+    <title>Tezbox Popup</title>
   </head>
 
   <body>
