Updates and additional development

--- a/src/popup.html
+++ b/src/popup.html
@@ -16,22 +16,19 @@
 
   <body>
     <div id="area" ng-view></div>
-    <div class="poweredby">
-    &copy; 2017 <a target="_blank" href="http://tezbox.github.io">TezBox</a> - Developed by Stephen Andrews<br />
-        Donate Bitcoin -  <a target="_blank" href="bitcoin:1KSiyfgs5XwTZjaLpmCTHxonsyXMx383P1">1KSiyfgs5XwTZjaLpmCTHxonsyXMx383P1</a>
-    </div>
     <!-- build:js popup.js -->
     <script src="js/popup.js"></script>
-    <script src="js/eztz.js"></script>
+    <script src="js/eztz.min.js"></script>
     <script src="js/sjcl.js"></script>
-    <script src="js/jdenticon.js"></script>
+    <script src="js/blockies.min.js"></script>
+    <script src="js/qrcode.js"></script>
     <script src="js/jquery/jquery.min.js"></script>
     <script src="js/underscore/underscore.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <script src="js/angular/angular.min.js"></script>
-    <script src="scripts/app/modules/angular-underscore.min.js"></script>
     <script src="scripts/app/modules/angular-route.min.js"></script>
-    <script src="scripts/app/modules/ui-bootstrap-0.9.0.min.js"></script>
+    <script src="scripts/app/modules/angular-blockies.js"></script>
+    <script src="scripts/app/modules/angular-qrcode.js"></script>
     <script src="scripts/app/app.js"></script>
     <script src="scripts/app/services/storage.js"></script>
     <script src="scripts/app/controllers/controllers.js"></script>
