--- a/src/main.html
+++ b/src/main.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="skin/css/bootstrap.min.css">
     <link rel="stylesheet" href="skin/css/angular-csp.css">
-    <link rel="stylesheet" href="skin/css/popup.css">
+    <link rel="stylesheet" href="skin/css/tezbox.css">
     <link rel="stylesheet" href="skin/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="skin/css/sweet-alert.css">
-    <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <title>TezBox - Light Wallet</title>
   <body>
     <div id="area" ng-view></div>
-    <script src="skin/js/popup.js"></script>
+    <script src="skin/js/tezbox.js"></script>
     <script src="skin/js/eztz.min.js"></script>
     <script src="skin/js/ledger.xtz.js"></script>
     <script src="skin/js/sjcl.js"></script>
@@ -30,6 +29,7 @@
     <script src="app/modules/angular-qrcode.js"></script>
     <script src="app/app.js"></script>
     <script src="app/services/storage.js"></script>
+    <script src="app/services/lang.js"></script>
     <script src="app/controllers/controllers.js"></script>
     <div id="loadingSpinnerContainer">
     <div class="bg"></div>
