--- a/src/main.html
+++ b/src/main.html
@@ -30,7 +30,7 @@
     <script src="app/app.js"></script>
     <script src="app/services/storage.js"></script>
     <script src="app/services/lang.js"></script>
-    <script src="app/controllers/controllers.js"></script>
+    <script src="app/controllers.js"></script>
     <div id="loadingSpinnerContainer">
     <div class="bg"></div>
     <div id="loading-bar-spinner" class="spinner"><div class="spinner-icon"></div></div>
