--- a/src/main.html
+++ b/src/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="skin/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="skin/css/sweet-alert.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <title>TezBox - Light Wallet</title>
+    <title>TezBox - Wallet Application</title>
   <body>
     <div id="area" ng-view></div>
     <script src="skin/js/tezbox.js"></script>
